--- a/cat_cas_car/composer.json
+++ b/cat_cas_car/composer.json
@@ -8,6 +8,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "demontpx/parsedown-bundle": "^3.0",
+        "http-interop/http-factory-guzzle": "^1.2",
+        "nexylan/slack-bundle": "^2.3",
+        "php-http/guzzle6-adapter": "^2.0",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
