--- a/cat_cas_car/.env
+++ b/cat_cas_car/.env
@@ -18,5 +18,4 @@ APP_ENV=dev
 APP_SECRET=2d24ccae385ba28f78f77551673d91ab
 ###< symfony/framework-bundle ###
 
-SLACK_WEBHOOK_URL=https://hooks.slack.com/services/~
-
+#SYMFONY_DECRIPTION_SECRET
