--- a/cat_cas_car/composer.json
+++ b/cat_cas_car/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-sodium": "*",
         "demontpx/parsedown-bundle": "^3.0",
         "http-interop/http-factory-guzzle": "^1.2",
         "nexylan/slack-bundle": "^2.3",
