--- a/cat_cas_car/config/services.yaml
+++ b/cat_cas_car/config/services.yaml
@@ -14,6 +14,7 @@ services:
         bind:
             $debug: '%kernel.debug%'
             Demontpx\ParsedownBundle\Parsedown: '@App\Service\Parsedown'
+#            $slackUrl: '%env(SLACK_WEBHOOK_URL)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
