--- a/cat_cas_car/config/services.yaml
+++ b/cat_cas_car/config/services.yaml
@@ -14,6 +14,7 @@ services:
         bind:
             $debug: '%kernel.debug%'
             Demontpx\ParsedownBundle\Parsedown: '@App\Service\Parsedown'
+            $markWithBold: '%env(bool:MARK_ARTICLE_WORDS_WITH_BOLD)%'
 #            $slackUrl: '%env(SLACK_WEBHOOK_URL)%'
 
     # makes classes in src/ available to be used as services
