--- a/cat_cas_car/.env
+++ b/cat_cas_car/.env
@@ -20,3 +20,11 @@ APP_SECRET=2d24ccae385ba28f78f77551673d91ab
 
 MARK_ARTICLE_WORDS_WITH_BOLD=true
 #SYMFONY_DECRIPTION_SECRET
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
+DATABASE_URL="mysql://skillbox_symfony:skillbox_symfony@127.0.0.1:3306/cat_cas_car?serverVersion=mariadb-10.6.4&charset=utf8"
+###< doctrine/doctrine-bundle ###
