--- a/cat_cas_car/composer.json
+++ b/cat_cas_car/composer.json
@@ -8,7 +8,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-sodium": "*",
+        "composer/package-versions-deprecated": "1.11.99.4",
         "demontpx/parsedown-bundle": "^3.0",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.10",
         "http-interop/http-factory-guzzle": "^1.2",
         "nesbot/carbon": "^2.53",
         "nexylan/slack-bundle": "^2.3",
@@ -20,6 +24,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
