--- a/cat_cas_car/composer.json
+++ b/cat_cas_car/composer.json
@@ -77,6 +77,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fzaninotto/faker": "^1.5",
         "symfony/debug-bundle": "5.3.*",
         "symfony/maker-bundle": "^1.34",
         "symfony/stopwatch": "5.3.*",
