--- a/cat_cas_car/config/packages/dev/monolog.yaml
+++ b/cat_cas_car/config/packages/dev/monolog.yaml
@@ -22,3 +22,8 @@ monolog:
             path: "%kernel.logs_dir%/markdown.log"
             level: debug
             channels: ["markdown"]
+        api_logging:
+            type: stream
+            path: "%kernel.logs_dir%/api.log"
+            level: debug
+            channels: ["api"]
