--- a/cat_cas_car/config/packages/security.yaml
+++ b/cat_cas_car/config/packages/security.yaml
@@ -22,6 +22,8 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
+                    - App\Security\ApiTokenAuthenticator
+                entry_point: App\Security\LoginFormAuthenticator
             remember_me:
                 secret:   '%kernel.secret%'
                 lifetime: 604800 # 1 week in seconds
