--- a/cat_cas_car/.env
+++ b/cat_cas_car/.env
@@ -28,3 +28,5 @@ MARK_ARTICLE_WORDS_WITH_BOLD=true
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="mysql://skillbox_symfony:skillbox_symfony@127.0.0.1:3306/cat_cas_car?serverVersion=mariadb-10.6.4&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+SITE_URL=//localhost:8000
