--- a/cat_cas_car/config/services.yaml
+++ b/cat_cas_car/config/services.yaml
@@ -5,6 +5,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     cache_adapter: cache.adapter.filesystem
+    articles_uploads: 'uploads/articles'
+    articles_uploads_url: '/%articles_uploads%'
+    articles_uploads_dir: '%kernel.project_dir%/public/%articles_uploads%'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -15,6 +18,11 @@ services:
             $debug: '%kernel.debug%'
             Demontpx\ParsedownBundle\Parsedown: '@App\Service\Parsedown'
             $markWithBold: '%env(bool:MARK_ARTICLE_WORDS_WITH_BOLD)%'
+
+            League\Flysystem\Filesystem $articleFileSystem: '@oneup_flysystem.uploads_articles_filesystem'
+
+#    App\Service\FileUploader $articleFileUploader: '@file_uploader.article'
+#    App\Service\FileUploader $avatarFileUploader: '@file_uploader.avatar'
 #            $slackUrl: '%env(SLACK_WEBHOOK_URL)%'
 
     # makes classes in src/ available to be used as services
@@ -26,6 +34,13 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
-
+#    file_uploader.avatar:
+#        class: App\Service\FileUploader
+#        arguments:
+#            $uploadsPath: '%articles_uploads_dir%'
+#    file_uploader.article:
+#        class: App\Service\FileUploader
+#        arguments:
+#            $uploadsPath: '%articles_uploads_dir%'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
