--- a/cat_cas_car/.env
+++ b/cat_cas_car/.env
@@ -29,4 +29,9 @@ MARK_ARTICLE_WORDS_WITH_BOLD=true
 DATABASE_URL="mysql://skillbox_symfony:skillbox_symfony@127.0.0.1:3306/cat_cas_car?serverVersion=mariadb-10.6.4&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
-SITE_URL=//localhost:8000
+SITE_BASE_SCHEME=https
+SITE_BASE_HOST=localhost:8000
+SITE_URL=${SITE_BASE_SCHEME}//${SITE_BASE_HOST}
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
