--- a/cat_cas_car/config/packages/twig.yaml
+++ b/cat_cas_car/config/packages/twig.yaml
@@ -3,6 +3,9 @@ twig:
     form_themes:
         - bootstrap_4_layout.html.twig
         - form/my_theme.html.twig
+    paths:
+        'assets/images': images
+        'assets/css': css
 
 when@test:
     twig:
