--- a/cat_cas_car/composer.json
+++ b/cat_cas_car/composer.json
@@ -17,10 +17,11 @@
         "doctrine/orm": "^2.10",
         "http-interop/http-factory-guzzle": "^1.2",
         "knplabs/knp-paginator-bundle": "^5.7",
+        "league/html-to-markdown": "^5.0",
         "liip/imagine-bundle": "^2.7",
         "nesbot/carbon": "^2.53",
         "nexylan/slack-bundle": "^2.3",
-        "oneup/flysystem-bundle": "^3.5",
+        "oneup/flysystem-bundle": "4.1.4",
         "php-http/guzzle6-adapter": "^2.0",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^6.2",
@@ -31,6 +32,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/mailer": "5.3.*",
         "symfony/mime": "5.3.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "5.3.*",
@@ -43,6 +45,7 @@
         "symfony/validator": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
+        "twig/cssinliner-extra": "^3.3",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/string-extra": "^3.3",
         "twig/twig": "^2.12|^3.0"
